# hr_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hr_system/: settings.py  urls.py
workers/: admin.py  models.py  serializers.py  services.py  test_workers.py  urls.py  views.py
workers/migrations/: 0001_initial.py  0002_remove_worker_workers_wor_email_af9293_idx.py
